--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <!-- Page Content -->
   <div class="container">
     <div class="centered">
-      <div class="amount">-50 USDT</div>
+      <div class="amount">-15 USDT</div>
       <div class="completed">&#10004; Completed</div>
       <div class="info-text">
         Crypto transferred out of Binance. Please contact the recipient platform for your transaction receipt.
@@ -152,17 +152,17 @@
 
     <div class="row">
       <div class="label">Address</div>
-      <div class="value">TWmFpRmkACAuxCmbHoyKrD<br>FwcMrGUZWgrM</div>
+      <div class="value">TQ8p2nFhJv4W1aQd7QWmZ4<br>pM8nRJ3Y3v7h</div>
     </div>
 
     <div class="row">
       <div class="label">Txid</div>
-      <div class="value">Off-chain Transfer<br>249878193736</div>
+      <div class="value">Off-chain Transfer<br>259878793739</div>
     </div>
 
     <div class="row">
       <div class="label">Amount</div>
-      <div class="value">50 USDT</div>
+      <div class="value">15 USDT</div>
     </div>
 
     <div class="row">
@@ -177,7 +177,7 @@
 
     <div class="row">
       <div class="label">Date</div>
-      <div class="value">2025-07-06 21:17:44</div>
+      <div class="value">2025-11-12 19:13:26</div>
     </div>
   </div>
 
